feat : Add openapi spec and swagger routes for API and implement S3 storage for documents
